# cmake_cross_platform_tool

./: README.md  ccpt  ccpt.bat  ccpt.py
examples/: show_cmake_info.cmake
examples/01-executable/: CMakeLists.txt  config.h.in  main.cpp  qsystemdetection.h  version.rc
examples/02-static-link/: CMakeLists.txt
examples/03-shared-link/: CMakeLists.txt
examples/04-cmake-tutorial-step7/: CMakeLists.txt
examples/06-findpackage/: CMakeLists.txt
